; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_voucher.c_iv_key_to_index.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_voucher.c_iv_key_to_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_VOUCHER_ATTR_KEY_ALL = common dso_local global i64 0, align 8
@MACH_VOUCHER_ATTR_KEY_NUM_WELL_KNOWN = common dso_local global i64 0, align 8
@IV_UNUSED_KEYINDEX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @iv_key_to_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @iv_key_to_index(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* @MACH_VOUCHER_ATTR_KEY_ALL, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i64, i64* @MACH_VOUCHER_ATTR_KEY_NUM_WELL_KNOWN, align 8
  %9 = load i64, i64* %3, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7, %1
  %12 = load i64, i64* @IV_UNUSED_KEYINDEX, align 8
  store i64 %12, i64* %2, align 8
  br label %16

13:                                               ; preds = %7
  %14 = load i64, i64* %3, align 8
  %15 = sub nsw i64 %14, 1
  store i64 %15, i64* %2, align 8
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i64, i64* %2, align 8
  ret i64 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
